# a1_real_ws

./: MUJOCO_LOG.TXT
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/a1_msgs/: FootPlanDiscrete.h
devel/include/mujoco_ros_msgs/: JointSet.h  SensorBase.h  SensorState.h  SimStatus.h
devel/lib/apriltag_ros/: apriltag_ros_continuous_node  apriltag_ros_single_image_client_node  apriltag_ros_single_image_server_node
devel/lib/mujoco_ros/: mujoco_ros
devel/lib/pkgconfig/: a1_description.pc  a1_msgs.pc  aliengoZ1_description.pc  aliengo_description.pc  apriltag_ros.pc  b1_description.pc  go1_description.pc  laikago_description.pc  mujoco_ros.pc  mujoco_ros_msgs.pc  realsense2_camera.pc  realsense2_description.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_hybrid_learning.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  unitree_legged_real.pc  unitree_mujoco_ros.pc  z1_description.pc
devel/lib/python3/dist-packages/a1_msgs/msg/: _FootPlanDiscrete.py
devel/lib/unitree_controller/: unitree_external_force  unitree_move_kinetic  unitree_servo
devel/lib/unitree_legged_real/: a1_gazebo  a1_mujoco  a1_realsense  dynamic_test  hardware_lcm  lcm_server_3_2  mujoco_recv  position_lcm  test_bezier  test_mpc  test_mpc_2  torque_lcm  velocity_lcm  walk_lcm
devel/lib/unitree_mujoco_ros/: A1_Hardware_Mujoco  A1_Hardware_Sim  A1_Sim_test  visualizer_test
devel/share/a1_description/cmake/: a1_descriptionConfig.cmake
devel/share/a1_msgs/cmake/: a1_msgsConfig.cmake
devel/share/aliengoZ1_description/cmake/: aliengoZ1_descriptionConfig.cmake
devel/share/aliengo_description/cmake/: aliengo_descriptionConfig.cmake
devel/share/apriltag_ros/cmake/: apriltag_ros-msg-paths.cmake  apriltag_rosConfig.cmake
devel/share/b1_description/cmake/: b1_descriptionConfig.cmake
devel/share/common-lisp/ros/a1_msgs/msg/: Contact.lisp  FootPlanDiscrete.lisp  _package_FootState.lisp  _package_MultiFootPlanDiscrete.lisp
devel/share/gennodejs/ros/a1_msgs/msg/: _index.js
devel/share/gennodejs/ros/mujoco_ros_msgs/msg/: _index.js
devel/share/go1_description/cmake/: go1_descriptionConfig.cmake
devel/share/laikago_description/cmake/: laikago_descriptionConfig.cmake
devel/share/mujoco_ros/cmake/: mujoco_rosConfig.cmake
devel/share/mujoco_ros_msgs/cmake/: mujoco_ros_msgsConfig.cmake
devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_cameraConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/roseus/ros/mujoco_ros_msgs/: manifest.l
devel/share/unitree_controller/cmake/: unitree_controllerConfig.cmake
devel/share/unitree_gazebo/cmake/: unitree_gazeboConfig.cmake
devel/share/unitree_hybrid_learning/cmake/: unitree_hybrid_learningConfig.cmake
devel/share/unitree_legged_control/cmake/: unitree_legged_controlConfig.cmake
devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgsConfig.cmake
devel/share/unitree_legged_real/cmake/: unitree_legged_realConfig.cmake
devel/share/unitree_mujoco_ros/cmake/: unitree_mujoco_rosConfig.cmake
devel/share/z1_description/cmake/: z1_descriptionConfig.cmake
install/: _setup_util.py
install/include/a1_msgs/: FootState.h  MultiFootPlanDiscrete.h
install/lib/a1_description/: marker.py
install/lib/pkgconfig/: a1_msgs.pc  aliengoZ1_description.pc  b1_description.pc  go1_description.pc  laikago_description.pc  realsense2_description.pc  unitree_legged_msgs.pc  unitree_legged_real.pc  z1_description.pc
install/lib/python3/dist-packages/a1_msgs/msg/: _FootState.py  _MultiFootPlanDiscrete.py  __init__.py
install/share/a1_msgs/msg/: Contact.msg  FootPlanDiscrete.msg
install/share/common-lisp/ros/a1_msgs/msg/: FootState.lisp  MultiFootPlanDiscrete.lisp  a1_msgs-msg.asd
install/share/gennodejs/ros/a1_msgs/msg/: MultiFootPlanDiscrete.js
install/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
install/share/laikago_description/cmake/: laikago_descriptionConfig.cmake
install/share/roseus/ros/a1_msgs/: manifest.l
install/share/roseus/ros/a1_msgs/msg/: Contact.l  FootPlanDiscrete.l
install/share/roseus/ros/realsense2_camera/: manifest.l
install/share/unitree_controller/cmake/: unitree_controllerConfig.cmake
install/share/unitree_legged_real/: package.xml
install/share/unitree_legged_real/cmake/: unitree_legged_realConfig.cmake
src/a1_msgs/: CMakeLists.txt
src/a1_msgs/msg/: FootState.msg  MultiFootPlanDiscrete.msg
src/assets/: cartpole.xml
src/assets/a1/: a1.urdf
src/assets/allegro_hand/: NV_AH.xml
src/assets/quadruped/: task_hill.xml
src/assets/turtlebot/: turtle.xml
src/assets/turtlebot/common/: materials.xml
src/unitree_legged_real/: CMakeLists.txt  ipconfig.sh
src/unitree_legged_real/config/: gazebo_a1_mpc.yaml  hardware_a1_mpc.yaml
src/unitree_legged_real/launch/: a1_gazebo.launch  a1_hardware.launch  a1_mujoco.launch  real.launch  rs_camera.launch
src/unitree_legged_real/src/exe/: A1Params.h  A1_Gazebo.cpp  A1_Gazebo.h  A1_Interface.cpp  A1_Interface.h  A1_Mujoco.cpp  A1_Mujoco.h  A1_QP_MPC.cpp  A1_QP_MPC.h  A1_control.cpp  A1_control.h  A1_dynamics.cpp  A1_dynamics.h  A1_dynamics_pino.cpp  A1_dynamics_pino.h  A1_realsense.cpp  A1_realsense.h  A1_state_estimation.cpp  A1_state_estimation.h  Bezier_curve.cpp  Bezier_curve.h  MainMujoco.cpp  Main_Realsense.cpp  Mujoco_Recv_Visual.cpp  QP_mpc_test.cpp  Robot_State.h  Utils.cpp  Utils.h  position_mode.cpp  robot_gazebo.cpp  robot_hardware.cpp  test_bezier.cpp  test_dynamics.cpp
